[tool.poetry]
name = "yelp_etl_pkg"
version = "0.1.0"
description = "Yelp DataEngineering Exercise - ETL Pipeline"
authors = ["Rahul Sharma <rahul_sharma21@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
DateTime = "^4.3"
pandas = "^1.2.1"
numpy = "^1.19.5"
s3fs = "^0.5.2"
poetry = "^1.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
